Updates from ShareLaTeX

--- a/chap01.tex
+++ b/chap01.tex
@@ -8,7 +8,7 @@ The basic intuition behind information theory is that learning that an unlikely 
 I(x) = -\log P(x).
 \end{equation}
 
-The overall information in a probability distribution is quantified by \newterm{Shanon entropy}:
+The overall information in a probability distribution is quantified by \newterm{Shannon entropy}:
 
 \begin{equation}
 H(X) = \E_{X \sim P} [ I(X) ] = -\E_{X \sim P} [ log P(x) ]
