--- a/thesis.tex
+++ b/thesis.tex
@@ -72,6 +72,7 @@
 \newcommand{\kldiv}{D_{KL}\infdivx}
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
+\usepackage{braket}
 
 \newlength{\notationgap}
 \setlength{\notationgap}{1pc}
@@ -150,6 +151,7 @@ Abstract.
 \include{chap02}
 \include{chap03}
 \include{chap04}
+\include{chap06}
 
 \include{epilog}
 
