--- a/chap02.tex
+++ b/chap02.tex
@@ -22,10 +22,9 @@
 \end{defn}
 
 \begin{defn}
-\todo{co to vubec znamena "has a density"?}
-    A random variable $\rX \in \sR^n$ is a \newterm{multivariate Gaussian} if any linear combination of its components is univariate Gaussian, i.e. $\va^T \mX = \sum_{i=1}^n \va_i \mX_i$ is Gaussian ($\forall \va \in \mR^n$).
+    {TODO co to vubec znamena "has a density"?}
     
-    \todo{This is apparently a more general definition than the usual definition with a density, because it allows for a degenerate multivariate Gaussian}
+    A random variable $\rX \in \sR^n$ is a \newterm{multivariate Gaussian} if any linear combination of its components is univariate Gaussian, i.e. $\va^T \mX = \sum_{i=1}^n \va_i \mX_i$ is Gaussian ($\forall \va \in \mR^n$).
 \end{defn}
 
 \begin{defn}
@@ -61,7 +60,7 @@
         f(\vx) = \frac{1}{\sqrt{\det(2 \pi \mSigma)}} \exp{ \left\{ - \frac{1}{2} (\vx - \vmu)^T \mSigma^{-1} (\vx - \vmu) \right\} }
     \end{equation}
     
-    Note that $\det(2 \pi \mSigma) = (2\pi)^n \det(\mSigma)$. Alternatively $(2 \pi)^{n/2} (\det \mSigma)^{1/2}$ \todo{check and proof}. Also note that $\det \mSigma \neq$ implies that $\mSigma$ is invertible, which conincides with the density requiring an invertible $\mSigma$.
+    Note that $\det(2 \pi \mSigma) = (2\pi)^n \det(\mSigma)$. Alternatively $(2 \pi)^{n/2} (\det \mSigma)^{1/2}$ {TODO check and proof}. Also note that $\det \mSigma \neq$ implies that $\mSigma$ is invertible, which conincides with the density requiring an invertible $\mSigma$.
     
     Also note that if $n = 1$, then $\mSigma = \sigma^2$, $cov(X, X) = \sigma^2 x$, $\mSigma^{-1} = \frac{1}{\sigma^2}$, and hence the multivariate Gaussian formula becomes the univariate one.
     
@@ -78,7 +77,7 @@
     \end{equation}
 \end{defn}
 
-We state the following result without proof \todo{citace, pridat proof}.
+We state the following result without proof {TODO citace, pridat proof}.
 
 \begin{thm}
     Let $X$ and $Y$ be two random variables. If
@@ -103,7 +102,7 @@ We state the following result without proof \todo{citace, pridat proof}.
         M_{X + Y}(t) = \E[e^{t(X + Y)}] = \E[e^{tX} e^{tY}] = \E[e^{tX}] \E[e^{tY}] = M_X(t) M_Y(t)
         \end{equation}
         
-        Here we have used that $X$ and $Y$ are independent -- and hence $e^{tX}$ and $e^{tY}$ are independent -- to conclude that $\E[e^{tX} e^{tY}] = \E[e^{tX}] \E[e^{tY}]$. \todo{prepsat? prakticky opsano}
+        Here we have used that $X$ and $Y$ are independent -- and hence $e^{tX}$ and $e^{tY}$ are independent -- to conclude that $\E[e^{tX} e^{tY}] = \E[e^{tX}] \E[e^{tY}]$. {TODO prepsat? prakticky opsano}
     \end{proof}
 \end{thm}
 
@@ -126,7 +125,7 @@ We state the following result without proof \todo{citace, pridat proof}.
     M_{X + Y}(t) = M_X(t) M_Y(t) = e^{t^2 \sigma_1^2 / 2 + \mu_1 t} e^{t^2 \sigma_2^2 / 2 + \mu_2 t} = e^{t^2 (\sigma_1^2 + \sigma_1^2) / 2 + (\mu_1 + \mu_2) t}
     \end{equation}
     
-    The rightmost expression is the moment generating function of a normal distribution. Theorem \ref{thm:sum-independent-gaussian} implies that $X + Y$ has a normal distribution with the corresponding parameters. \todo{opsano z \citep{mitzenmacher2017probability}}
+    The rightmost expression is the moment generating function of a normal distribution. Theorem \ref{thm:sum-independent-gaussian} implies that $X + Y$ has a normal distribution with the corresponding parameters. {TODO opsano z \citep{mitzenmacher2017probability}}
     \end{proof}
 \end{thm}
 
@@ -176,7 +175,7 @@ We state the following result without proof \todo{citace, pridat proof}.
 \end{thm}
 
 \begin{thm}
-    Given a random variable $\mX \sim \gN(\mZero, \mI)$, covariance matrix $\mSigma = \mL \mL^T$ \todo{note cholesky decomp}, we show that
+    Given a random variable $\mX \sim \gN(\mZero, \mI)$, covariance matrix $\mSigma = \mL \mL^T$ {TODO note cholesky decomp}, we show that
     
     \begin{equation}
         \mL \mX \sim \gN(\mZero, \mSigma).
@@ -191,7 +190,7 @@ We state the following result without proof \todo{citace, pridat proof}.
     \end{proof}
 \end{thm}
 
-Since samples from $\gN(\mZero, \mI)$ can be generated independently, all we need to take samples from an arbitrary Gaussian is to have the ability to generate independent samples (which can be achieved for example using the Box-Muller transform \todo{define? ref?}) and a procedure for Cholesky decomposition.
+Since samples from $\gN(\mZero, \mI)$ can be generated independently, all we need to take samples from an arbitrary Gaussian is to have the ability to generate independent samples (which can be achieved for example using the Box-Muller transform {TODO define? ref?}) and a procedure for Cholesky decomposition.
 
 \begin{defn}
     \newterm{Affine transformation}:
@@ -226,9 +225,13 @@ Since samples from $\gN(\mZero, \mI)$ can be generated independently, all we nee
 \end{thm}
 
 \begin{tcolorbox}
-    Let $\mX \sim \gN(0, \mI)$. Let $\mSigma$ be a covariance matrix, and $\vmu \in \mR^n$. Covariance matrix is always positive semi-definite, which means its eigenvalues are non-negative \todo{better text}. Because $\mSigma$ is a real, symmetric, positive semi-definite matrix it can be written as $\mSigma = \mQ \mLambda \mQ^T$ where $\mQ$ is an orthogonal matrix of eigenvectors, and $\mLambda$ is a diagonal matrix of eigenvalues \todo{proof in appendix}.
+    Let $\mX \sim \gN(0, \mI)$. Let $\mSigma$ be a covariance matrix, and $\vmu \in \mR^n$. Covariance matrix is always positive semi-definite, which means its eigenvalues are non-negative {TODO better text}. Because $\mSigma$ is a real, symmetric, positive semi-definite matrix it can be written as $\mSigma = \mQ \mLambda \mQ^T$ where $\mQ$ is an orthogonal matrix of eigenvectors, and $\mLambda$ is a diagonal matrix of eigenvalues.
     
-    We can then do a simple algebraic manipulation to get the square root of $\mSigma = \mA \mA^T$. \todo{equivalent to cholesky decomp?}
+    TODO proof in appendix
+    
+    We can then do a simple algebraic manipulation to get the square root of $\mSigma = \mA \mA^T$. 
+    
+    TODO equivalent to cholesky decomp?
     
     \begin{equation}
         \mSigma = \mQ \mLambda \mQ^T = \mQ \mLambda^{1/2} \mLambda^{1/2} \mQ = (\mQ \mLambda^{1/2}) (\mQ \mLambda^{1/2})^T = \mA \mA^T
@@ -236,7 +239,7 @@ Since samples from $\gN(\mZero, \mI)$ can be generated independently, all we nee
     
     Now we can do $\mY = \mA \mX + \vmu \implies \mY \sim \gN(\vmu, \mSigma)$.
     
-    Draw level sets of $\mX \sim \gN(0, \mI)$, $\mLambda^{1/2} \mX \sim \gN(0, \mLambda)$, $\mQ \mLambda^{1/2} \mX \sim \gN(0, \mSigma)$. $\mQ$ contains the eigenvectors of $\mSigma$, and multiplication by $\mQ$ rotates (every orthogonal matrix is equivalent to a rotation \todo{proof appendix}) the variable so that the axes are aligned to the eigenvectors. In other words, $\mQ$ is a change of basis from the eigenvector basis to the canonical basis, causing the rotation. $\mQ \mLambda^{1/2} \mX + \vmu \sim \gN(\vmu, \mSigma)$, in which case $\vmu$ simply shifts the whole coordinate space by $\vmu$, which in the case of a Gaussian only affects the mean \todo{proof}.
+    Draw level sets of $\mX \sim \gN(0, \mI)$, $\mLambda^{1/2} \mX \sim \gN(0, \mLambda)$, $\mQ \mLambda^{1/2} \mX \sim \gN(0, \mSigma)$. $\mQ$ contains the eigenvectors of $\mSigma$, and multiplication by $\mQ$ rotates (every orthogonal matrix is equivalent to a rotation  {TODO proof appendix}) the variable so that the axes are aligned to the eigenvectors. In other words, $\mQ$ is a change of basis from the eigenvector basis to the canonical basis, causing the rotation. $\mQ \mLambda^{1/2} \mX + \vmu \sim \gN(\vmu, \mSigma)$, in which case $\vmu$ simply shifts the whole coordinate space by $\vmu$, which in the case of a Gaussian only affects the mean {TODO proof}.
     
     In summary, the eigenvalues in $\mLambda$ scale, $\mQ$ rotates in the direction of the eigenvectors, and $\vmu$ shifts the origin.
     
@@ -257,28 +260,28 @@ Since samples from $\gN(\mZero, \mI)$ can be generated independently, all we nee
 
 
 \begin{tcolorbox}
-    The term $(\vx - \vmu)^T \mSigma^{-1}(\vx - \vmu)$ is called a Mahalanobis distance, and is also a quadratic form in $x$. A general quadratic form is $\vx^T \mA \vx$. \todo{rewrite, derive that gaussian is a hyper-ellipsoid}.
+    The term $(\vx - \vmu)^T \mSigma^{-1}(\vx - \vmu)$ is called a Mahalanobis distance, and is also a quadratic form in $x$. A general quadratic form is $\vx^T \mA \vx$. {TODO rewrite, derive that gaussian is a hyper-ellipsoid}.
     
-    Prove, that when $\mA$ is positive semi-definite, the shape is an ellipsoid. \todo{small appendix on quadratic forms and Mahalanobis distance}.
+    Prove, that when $\mA$ is positive semi-definite, the shape is an ellipsoid. {TODO small appendix on quadratic forms and Mahalanobis distance}.
     
-    We can think of a gaussian as $\exp{\left\{ \text{quadratic form} \right\} }$. \todo{prove that covariance matrix is positive semi-definite}. \todo{prove, that if individual components have positive variances, the joint will be diagonal positive definite}.
+    We can think of a gaussian as $\exp{\left\{ \text{quadratic form} \right\} }$. {TODO prove that covariance matrix is positive semi-definite}. {TODO prove, that if individual components have positive variances, the joint will be diagonal positive definite}.
     
         
     We note here that the functional dependence of the Gaussian on $\vx$ is through the quadratic form
     
     \begin{equation}
-    \Delta^2 = (\vx - \vmu)^T \mSigma^{-1} (\vx - \vmu)
+        \Delta^2 = (\vx - \vmu)^T \mSigma^{-1} (\vx - \vmu)
     \end{equation}
     
-    which appears in the exponent \citep{bishop2016pattern} \todo{rewrite and remove the quote, or keep it?}. The quantity $\Delta$ is called the \newterm{Mahalanobis distance} from $\vmu$ to $\vx$ and reduces to the Euclidean distance when $\mSigma$ is the identity matrix. We will make use of the quadratic form in the following section when we derive the conditional and marginal distribution of the multivariate Gaussian.
+    which appears in the exponent \citep{bishop2016pattern} {TODO rewrite and remove the quote, or keep it?}. The quantity $\Delta$ is called the \newterm{Mahalanobis distance} from $\vmu$ to $\vx$ and reduces to the Euclidean distance when $\mSigma$ is the identity matrix. We will make use of the quadratic form in the following section when we derive the conditional and marginal distribution of the multivariate Gaussian.
     
-    Since $\mSigma$ is a covariance matrix we know it is positive definite \todo{why not only semidefinite? describe the degenerate case}, we can perform \newterm{eigendecomposition} on it to get $\mSigma = \mU \mLambda \mU^T$, where $\mU$ is an ortogonal matrix of eigenvectors, and $\mLambda$ is a diagonal matrix of eigenvalues. Basic matrix algebra gives us the following:
+    Since $\mSigma$ is a covariance matrix we know it is positive definite {TODO why not only semidefinite? describe the degenerate case}, we can perform \newterm{eigendecomposition} on it to get $\mSigma = \mU \mLambda \mU^T$, where $\mU$ is an ortogonal matrix of eigenvectors, and $\mLambda$ is a diagonal matrix of eigenvalues. Basic matrix algebra gives us the following:
     
     \begin{equation}
     \mSigma^{-1} = (\mU^T)^{-1} \mLambda^{-1} \mU^{-1} = \mU \mLambda^{-1} \mU^T = \sum_{i = 1}^D \frac{1}{\lambda_i} \vu_i \vu_i^T
     \end{equation}
     
-    where the second to last equality comes from $\mU$ being orthogonal ($\mU^{-1} = \mU^T$). We can use this to obtain a different form of the Mahalanobis distance: \todo{cite bishop?}
+    where the second to last equality comes from $\mU$ being orthogonal ($\mU^{-1} = \mU^T$). We can use this to obtain a different form of the Mahalanobis distance:
     
     \begin{align}
     (\vx - \vmu)^T \mSigma^{-1} (\vx - \vmu) &= (\vx - \vmu)^T \left( \sum_{i = 1}^D \frac{1}{\lambda_i} \vu_i \vu_i^T \right) (\vx - \vmu) \\
@@ -286,9 +289,9 @@ Since samples from $\gN(\mZero, \mI)$ can be generated independently, all we nee
     &= \sum_{i = 1}^D \frac{y_i^2}{\lambda_i} \label{eq:mvn-ellipse}
     \end{align}
     
-    where $y_i = u_{i}^{T} (\vx - \vmu)$ \todo{use a notation for definition}. The equation \eqref{eq:mvn-ellipse} has exactly the same form as a $D$-dimensional ellipse. From this we conclude that the contour lines of a multivariate Gaussian will be elliptical, where the eigenvectors determine the orientation of the ellipse, and the eigenvalues determine its radius \todo{better word?} along each eigenvector.
+    where $y_i = u_{i}^{T} (\vx - \vmu)$ {TODO use a notation for definition}. The equation \eqref{eq:mvn-ellipse} has exactly the same form as a $D$-dimensional ellipse. From this we conclude that the contour lines of a multivariate Gaussian will be elliptical, where the eigenvectors determine the orientation of the ellipse, and the eigenvalues determine its radius {TODO better word?} along each eigenvector.
     
-    \todo{complete the properties and derivation}
+    {TODO complete the properties and derivation}
 \end{tcolorbox}
 
 
@@ -302,14 +305,14 @@ In this section we derive the conditional $p(x_1 | x_2)$ and marginal $p(x_1)$ f
 Supposed $\vx$ is a $D$-dimensional random vector with a Gaussian distribution $\gN(\vx | \vmu, \mSigma)$, and that $\vx$ is partitioned into two vectors $\vx_1$ and $\vx_2$ such that
 
 \begin{equation}
-\vx = \partx
+    \vx = \partx
 \end{equation}
 
 We also partition the mean vector $\vmu$ and the covariance matrix $\mSigma$ into a block matrix. We also define the inverse of the covariance matrix $\mLambda = \mSigma^{-1}$, which will simplify a few of the equations that follow. We will derive the exact form of $\mLambda$ and of its individual blocks later in this section. For now we simply use the fact that $\mSigma$ is positive-definite, and thus it is invertible. The matrix $\mLambda$ is also known as a \newterm{precision matrix}.
 
 \begin{equation}
-\vmu = \partmu,
-\mSigma = \partsigma, \mLambda = \mSigma^{-1} = \partlambda \label{eq:mvn-partition}
+    \vmu = \partmu,
+    \mSigma = \partsigma, \mLambda = \mSigma^{-1} = \partlambda \label{eq:mvn-partition}
 \end{equation}
 
 Note that since $\mSigma$ is a symmetric matrix, $\ms{12}^T = \ms{21}$, and similarly $\ml{12}^T = \ml{21}$. Similarly, $\ms{11}$, $\ms{22}$, $\ml{11}$, and $\ml{22}$ are all symmetrical.
@@ -319,39 +322,37 @@ Before we derive the parameters of the conditional, we show that the conditional
 We now use the partitioned form of the multivariate Gaussian defined by \eqref{eq:mvn-partition} to show that $p(x_1 | x_2)$ is actually a Gaussian. Let us begin by looking at the exponent in \eqref{eq:multi-gaussian}:
 
 \begin{align}
--\frac{1}{2} (\vx - \vmu)^T \mLambda (\vx - \vmu) &= 
--\frac{1}{2} \left(\partx - \partmu \right)^T \partlambda \left(\partx - \partmu \right) \\
-&= -\frac{1}{2} \partxmu^T \partlambda \partxmu
+    -\frac{1}{2} (\vx - \vmu)^T \mLambda (\vx - \vmu) &= 
+    -\frac{1}{2} \left(\partx - \partmu \right)^T \partlambda \left(\partx - \partmu \right) \\
+    &= -\frac{1}{2} \partxmu^T \partlambda \partxmu
 \end{align}
 
 To make the next few equations easier to follow we set $\vy_1 = \vx_1 - \vmu_1$ and $\vy_2 = \vx_2 - \vmu_2$.
 
 \begin{align}
-\begin{split}
--\frac{1}{2} \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix} ^T \partlambda \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix} ={}& -\frac{1}{2} \begin{bmatrix} \vy_1 \ml{11} + \vy_2 \ml{21} \\ \vy_1 \ml{12} + \vy_2 \ml{22} \end{bmatrix} ^T \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix}
-\end{split} \\
-%
-\begin{split}
-={}& -\frac{1}{2} \left( \vy_1^T \ml{11} \vy_1 + \vy_2^T \ml{21} \vy_1 + \vy_1^T \ml{12} \vy_2 + \vy_2^T \ml{22} \vy_2 \right)
-\end{split} \\
-%
-\begin{split}
-={}& -\frac{1}{2} (\vx_1 - \vmu_1)^T \ml{11} (\vx_1 - \vmu_1) {}+ \\
-  &-\frac{1}{2} (\vx_2 - \vmu_2)^T \ml{21} (\vx_1 - \vmu_1) {}+ \\
-  &-\frac{1}{2} (\vx_1 - \vmu_1)^T \ml{12} (\vx_2 - \vmu_2) {}+ \\
-  &-\frac{1}{2} (\vx_2 - \vmu_2)^T \ml{22} (\vx_2 - \vmu_2) \label{eq:mvn-quadratic-form}
-\end{split}
+    \begin{split}
+    -\frac{1}{2} \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix} ^T \partlambda \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix} ={}& -\frac{1}{2} \begin{bmatrix} \vy_1 \ml{11} + \vy_2 \ml{21} \\ \vy_1 \ml{12} + \vy_2 \ml{22} \end{bmatrix} ^T \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix}
+    \end{split} \\
+    %
+    \begin{split}
+    ={}& -\frac{1}{2} \left( \vy_1^T \ml{11} \vy_1 + \vy_2^T \ml{21} \vy_1 + \vy_1^T \ml{12} \vy_2 + \vy_2^T \ml{22} \vy_2 \right)
+    \end{split} \\
+    %
+    \begin{split}
+    ={}& -\frac{1}{2} (\vx_1 - \vmu_1)^T \ml{11} (\vx_1 - \vmu_1) {}+ \\
+      &-\frac{1}{2} (\vx_2 - \vmu_2)^T \ml{21} (\vx_1 - \vmu_1) {}+ \\
+      &-\frac{1}{2} (\vx_1 - \vmu_1)^T \ml{12} (\vx_2 - \vmu_2) {}+ \\
+      &-\frac{1}{2} (\vx_2 - \vmu_2)^T \ml{22} (\vx_2 - \vmu_2) \label{eq:mvn-quadratic-form}
+    \end{split}
 \end{align}
 
-\todo{fix + alignment and equation numbering, fix spacing of + in 1.29}
+{TODO fix + alignment and equation numbering, fix spacing of + in 1.29}
 
-We see that this is a quadratic form in $x_1$, and hence the corresponding conditional distribution $p(x_1 | x_2)$ will be Gaussian. \todo{better explain, cite bishop again?}. We can use \eqref{eq:mvn-quadratic-form} to derive the parameters of $p(x_1 | x_2)$ since
+We see that this is a quadratic form in $x_1$, and hence the corresponding conditional distribution $p(x_1 | x_2)$ will be Gaussian. {TODO better explain, cite bishop again?}. We can use \eqref{eq:mvn-quadratic-form} to derive the parameters of $p(x_1 | x_2)$ since
 
-\todo{partition matrix inversion lemma}
+{TODO partition matrix inversion lemma}
 
 \citep{murphy2012machine}
-
-
 
 
 
@@ -359,83 +360,83 @@ We see that this is a quadratic form in $x_1$, and hence the corresponding condi
 TODODODODODODO
 
 
-\begin{thm} Conditional and marginal Gaussian parameters \citep{murphy2012machine} \todo{popsat vetu poradne}
-
-\begin{align}
-p(x_1, x_2) &= p(x_1 | x_2) p(x_2) \\
-&= \gN(x_1 | \vmu_{1|2}, \ms{1|2}) \gN(x_2 | \vmu_2, \ms{22})
-\end{align}
-
-the parameters are \todo{zkontrolovat kde je $\mu$ a chybi tam vector}
-
-\begin{align}
-\vmu_{1|2} &= \vmu_1 - \ms{12} \ms{22}^{-1} (\vx_2 - \vmu_2) \\
-\ms{1|2} &= \mSigma / \ms{22} = \ms{11} - \ms{12} \ms{22}^{-1} \ms{21}
-\end{align}
+\begin{thm}
+    Conditional and marginal Gaussian parameters \citep{murphy2012machine} {TODO popsat vetu poradne}
+    
+    \begin{align}
+    p(x_1, x_2) &= p(x_1 | x_2) p(x_2) \\
+    &= \gN(x_1 | \vmu_{1|2}, \ms{1|2}) \gN(x_2 | \vmu_2, \ms{22})
+    \end{align}
+    
+    the parameters are {TODO zkontrolovat kde je $\mu$ a chybi tam vector}
+    
+    \begin{align}
+    \vmu_{1|2} &= \vmu_1 - \ms{12} \ms{22}^{-1} (\vx_2 - \vmu_2) \\
+    \ms{1|2} &= \mSigma / \ms{22} = \ms{11} - \ms{12} \ms{22}^{-1} \ms{21}
+    \end{align}
 \end{thm}
 
 \begin{proof}
-
-To make the equations more readable, we define 
-
-\begin{align}
-\vy_1 &= \vx_1 - \vmu_1 \\
-\vy_2 &= \vx_2 - \vmu_2
-\end{align}
-
-\todo{chybi tecka?}
-
-We then simply take the block definition of a multivariate Gaussian and multiply everything out
-
-\begin{align}
-E &= \exp \left\lbrace -\frac{1}{2}
-\begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix}^T
-\partsigma
-\begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix} \right\rbrace \\
-%
-&= \exp \left\lbrace -\frac{1}{2}
-\begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix}^T
-\begin{bmatrix} \mI & \mZero \\ -\mSigma_{22}^{-1} \mSigma_{21} & \mI \end{bmatrix}
-\begin{bmatrix} (\mSigma/\mSigma_{22})^{-1} & \mZero \\ \mZero & \mSigma_{22}^{-1} \end{bmatrix}
-\begin{bmatrix} \mI & -\mSigma_{12} \mSigma_{22}^{-1} & \\ \mZero & \mI \end{bmatrix}
-\begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix} \right\rbrace \\
-%
-&= \exp \left\lbrace -\frac{1}{2}
-\begin{bmatrix} \vy_1^T - \vy_2^T (\mSigma_{22}^{-1} \mSigma_{21}) \\
-\vy_2
-\end{bmatrix}^T
-\begin{bmatrix} (\mSigma/\mSigma_{22})^{-1} & \mZero \\ \mZero & \mSigma_{22}^{-1} \end{bmatrix} \begin{bmatrix} \vy_1 -\mSigma_{12} \mSigma_{22}^{-1} (\vy_2) \\ \vy_2 \end{bmatrix} \right\rbrace \\
-%
-&= \exp \left\lbrace -\frac{1}{2}
-\begin{bmatrix} (\vy_1^T - \vy_2^T \mSigma_{22}^{-1} \mSigma_{21}) (\mSigma/\mSigma_{22})^{-1} \\
-\vy_2^T \mSigma_{22}^{-1}
-\end{bmatrix}^T
-\begin{bmatrix} \vy_1 -\mSigma_{12} \mSigma_{22}^{-1} (\vy_2) \\ \vy_2 \end{bmatrix}
-\right\rbrace \\
-%
-&= \exp \left\lbrace -\frac{1}{2}
-(\vy_1^T - \vy_2^T \mSigma_{22}^{-1} \mSigma_{21}) (\mSigma/\mSigma_{22})^{-1} (\vy_1 -\mSigma_{12} \mSigma_{22}^{-1} \vy_2)
-\right\rbrace \times \\
-& \qquad\qquad \times \exp \left\lbrace -\frac{1}{2} \vy_2^T \mSigma_{22}^{-1} \vy_2 \right\rbrace \nonumber
-\end{align}
-
-We can immediately see that the second term is a quadratic form in $\vx_2$ and corresponds to $\gN(\vx_2 | \vmu_2, \mSigma_{22})$. Let us now consider the first term in isolation and move the terms around a little bit. We also make use of the fact that because $\mSigma_{22}$ is a positive-definite \todo{check this and maybe show a small proof?} matrix, its inverse is also symmetric, so $\mSigma^{-1^T}_{22} = \mSigma^{-1}_{22}$. We also know that $\mSigma^T_{12} = \mSigma_{21}$.
-
-\begin{align}
-E_{1|2} &= \exp \left\lbrace -\frac{1}{2}
-(\vy_1^T - \vy_2^T \mSigma_{22}^{-1} \mSigma_{21}) (\mSigma/\mSigma_{22})^{-1} (\vy_1 -\mSigma_{12} \mSigma_{22}^{-1} \vy_2) \right\rbrace \\
-&= \exp \left\lbrace -\frac{1}{2}
-(\vy_1 - \mSigma_{12}\mSigma_{22}^{-1} \vy_2)^T (\mSigma/\mSigma_{22})^{-1} (\vy_1 -\mSigma_{12} \mSigma_{22}^{-1} \vy_2) \right\rbrace \\
-&= \exp \left\lbrace -\frac{1}{2}
-(\vx_1 - \vmu_1 - \mSigma_{12}\mSigma_{22}^{-1} (\vx_2 - \vmu_2)^T (\mSigma/\mSigma_{22})^{-1} (\vx_1 - \vmu_1 -\mSigma_{12} \mSigma_{22}^{-1} (\vx_2 - \vmu_2)) \right\rbrace \label{eq:mvn-quadratic-form-12}
-\end{align}
-
-In \eqref{eq:mvn-quadratic-form-12} we again see a Gaussian density with
-
-\begin{align}
-\vmu_{1|2} &= \vmu_1 - \mSigma_{12}\mSigma_{22}^{-1} (\vx_2 - \vmu_2) \\
-\mSigma_{1|2} &= (\mSigma/\mSigma_{22})^{-1} =  \ms{11} - \ms{12} \ms{22}^{-1} \ms{21}
-\end{align}
+    To make the equations more readable, we define 
+    
+    \begin{align}
+        \vy_1 &= \vx_1 - \vmu_1 \\
+        \vy_2 &= \vx_2 - \vmu_2.
+    \end{align}
+    
+    We then simply take the block definition of a multivariate Gaussian and multiply everything out
+    
+    \begin{align}
+        E &= \exp \left\lbrace -\frac{1}{2}
+        \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix}^T
+        \partsigma
+        \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix} \right\rbrace \\
+        %
+        &= \exp \left\lbrace -\frac{1}{2}
+        \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix}^T
+        \begin{bmatrix} \mI & \mZero \\ -\mSigma_{22}^{-1} \mSigma_{21} & \mI \end{bmatrix}
+        \begin{bmatrix} (\mSigma/\mSigma_{22})^{-1} & \mZero \\ \mZero & \mSigma_{22}^{-1} \end{bmatrix}
+        \begin{bmatrix} \mI & -\mSigma_{12} \mSigma_{22}^{-1} & \\ \mZero & \mI \end{bmatrix}
+        \begin{bmatrix} \vy_1 \\ \vy_2 \end{bmatrix} \right\rbrace \\
+        %
+        &= \exp \left\lbrace -\frac{1}{2}
+        \begin{bmatrix} \vy_1^T - \vy_2^T (\mSigma_{22}^{-1} \mSigma_{21}) \\
+        \vy_2
+        \end{bmatrix}^T
+        \begin{bmatrix} (\mSigma/\mSigma_{22})^{-1} & \mZero \\ \mZero & \mSigma_{22}^{-1} \end{bmatrix} \begin{bmatrix} \vy_1 -\mSigma_{12} \mSigma_{22}^{-1} (\vy_2) \\ \vy_2 \end{bmatrix} \right\rbrace \\
+        %
+        &= \exp \left\lbrace -\frac{1}{2}
+        \begin{bmatrix} (\vy_1^T - \vy_2^T \mSigma_{22}^{-1} \mSigma_{21}) (\mSigma/\mSigma_{22})^{-1} \\
+        \vy_2^T \mSigma_{22}^{-1}
+        \end{bmatrix}^T
+        \begin{bmatrix} \vy_1 -\mSigma_{12} \mSigma_{22}^{-1} (\vy_2) \\ \vy_2 \end{bmatrix}
+        \right\rbrace \\
+        %
+        &= \exp \left\lbrace -\frac{1}{2}
+        (\vy_1^T - \vy_2^T \mSigma_{22}^{-1} \mSigma_{21}) (\mSigma/\mSigma_{22})^{-1} (\vy_1 -\mSigma_{12} \mSigma_{22}^{-1} \vy_2)
+        \right\rbrace \times \\
+        & \qquad\qquad \times \exp \left\lbrace -\frac{1}{2} \vy_2^T \mSigma_{22}^{-1} \vy_2 \right\rbrace \nonumber
+    \end{align}
+    
+    We can immediately see that the second term is a quadratic form in $\vx_2$ and corresponds to $\gN(\vx_2 | \vmu_2, \mSigma_{22})$. Let us now consider the first term in isolation and move the terms around a little bit. We also make use of the fact that because $\mSigma_{22}$ is a positive-definite {TODO check this and maybe show a small proof?} matrix, its inverse is also symmetric, so $\mSigma^{-1^T}_{22} = \mSigma^{-1}_{22}$. We also know that $\mSigma^T_{12} = \mSigma_{21}$.
+    
+    \begin{align}
+        E_{1|2} &= \exp \left\lbrace -\frac{1}{2}
+        (\vy_1^T - \vy_2^T \mSigma_{22}^{-1} \mSigma_{21}) (\mSigma/\mSigma_{22})^{-1} (\vy_1 -\mSigma_{12} \mSigma_{22}^{-1} \vy_2) \right\rbrace \\
+        &= \exp \left\lbrace -\frac{1}{2}
+        (\vy_1 - \mSigma_{12}\mSigma_{22}^{-1} \vy_2)^T (\mSigma/\mSigma_{22})^{-1} (\vy_1 -\mSigma_{12} \mSigma_{22}^{-1} \vy_2) \right\rbrace \\
+        &= \exp \left\lbrace -\frac{1}{2}
+        (\vx_1 - \vmu_1 - \mSigma_{12}\mSigma_{22}^{-1} (\vx_2 - \vmu_2)^T (\mSigma/\mSigma_{22})^{-1} (\vx_1 - \vmu_1 -\mSigma_{12} \mSigma_{22}^{-1} (\vx_2 - \vmu_2)) \right\rbrace \label{eq:mvn-quadratic-form-12}
+    \end{align}
+    
+    In \eqref{eq:mvn-quadratic-form-12} we again see a Gaussian density with
+    
+    MEAN JE SPATNE, MINuS
+    
+    \begin{align}
+        \vmu_{1|2} &= \vmu_1 - \mSigma_{12}\mSigma_{22}^{-1} (\vx_2 - \vmu_2) \\
+        \mSigma_{1|2} &= (\mSigma/\mSigma_{22})^{-1} =  \ms{11} - \ms{12} \ms{22}^{-1} \ms{21}
+    \end{align}
 \end{proof}
 
 
@@ -443,42 +444,41 @@ In \eqref{eq:mvn-quadratic-form-12} we again see a Gaussian density with
 \begin{tcolorbox}
     \section{Marginal and Conditional distribution}
     
-    If $\mX = (\mX_1, \mX_2) \in \sR^2$ are jointly Gaussian, then $\mX_1, \mX_2$ individually are also Gaussian. \todo{write it as a theorem}
+    If $\mX = (\mX_1, \mX_2) \in \sR^2$ are jointly Gaussian, then $\mX_1, \mX_2$ individually are also Gaussian. {TODO write it as a theorem}
     
     \begin{proof}
-    By the affine property, $\mA \mX + \vb$ is always a Gaussian. Let us set $\mA = (\mI 0), \vb = 0$. We get $\gN(\mA \vmu + \vb, \mA \mSigma \mA^T)$ and see that both $\mX_1$ and $\mX_2$ are Gaussian.
-    
-    More generally $\mX \sim \gN(\vmu, \mSigma), \va = (1, \dots, k), b = (k+1, \dots, n), 1 \leq k \leq n$.
-    
-    \begin{align}
-        \mX &= \begin{bmatrix} \mX_a \\ \mX_b \end{bmatrix},
-        \mX_a = \begin{bmatrix} \mX_1 \\ \vdots \\ \mX_k \end{bmatrix},
-        \mX_b = \begin{bmatrix} \mX_{k+1} \\ \vdots \\ \mX_n \end{bmatrix} \\
-        \vmu &= \begin{bmatrix} \vmu_a \\ \vmu_b \end{bmatrix} \\
-        \mSigma &= \begin{bmatrix}
-            \mSigma_{aa} & \mSigma_{ab} \\
-            \mSigma_{ba} & \mSigma_{bb}
-        \end{bmatrix}
-    \end{align}
-    
-    We then show that:
-    
-    \begin{equation}
-    \mX_a \sim \gN(\vmu_a, \mSigma_{aa})
-    \end{equation}
-    
-    This is true because can use the affine property with a projection matrix on the first $k$ dimensions.
-    
-    \begin{equation}
-        \mA = \begin{bmatrix} \mI_k 0 \end{bmatrix}, \quad \mA \in \sR^{k \times n}
-    \end{equation}
-    
-    By construction, $\mA \mX = \mX_a \sim \gN(\mA \vmu, \mA \mSigma \mA^T)$, where $\mA \vmu = \mu_a$, and $\mA \mSigma \mA^T = \mSigma_{aa}$, and thus $\mX_a \sim \gN(\vmu_a, \mSigma_{aa})$.
-    
+        By the affine property, $\mA \mX + \vb$ is always a Gaussian. Let us set $\mA = (\mI 0), \vb = 0$. We get $\gN(\mA \vmu + \vb, \mA \mSigma \mA^T)$ and see that both $\mX_1$ and $\mX_2$ are Gaussian.
+        
+        More generally $\mX \sim \gN(\vmu, \mSigma), \va = (1, \dots, k), b = (k+1, \dots, n), 1 \leq k \leq n$.
+        
+        \begin{align}
+            \mX &= \begin{bmatrix} \mX_a \\ \mX_b \end{bmatrix},
+            \mX_a = \begin{bmatrix} \mX_1 \\ \vdots \\ \mX_k \end{bmatrix},
+            \mX_b = \begin{bmatrix} \mX_{k+1} \\ \vdots \\ \mX_n \end{bmatrix} \\
+            \vmu &= \begin{bmatrix} \vmu_a \\ \vmu_b \end{bmatrix} \\
+            \mSigma &= \begin{bmatrix}
+                \mSigma_{aa} & \mSigma_{ab} \\
+                \mSigma_{ba} & \mSigma_{bb}
+            \end{bmatrix}
+        \end{align}
+        
+        We then show that:
+        
+        \begin{equation}
+            \mX_a \sim \gN(\vmu_a, \mSigma_{aa})
+        \end{equation}
+        
+        This is true because can use the affine property with a projection matrix on the first $k$ dimensions.
+        
+        \begin{equation}
+            \mA = \begin{bmatrix} \mI_k 0 \end{bmatrix}, \quad \mA \in \sR^{k \times n}
+        \end{equation}
+        
+        By construction, $\mA \mX = \mX_a \sim \gN(\mA \vmu, \mA \mSigma \mA^T)$, where $\mA \vmu = \mu_a$, and $\mA \mSigma \mA^T = \mSigma_{aa}$, and thus $\mX_a \sim \gN(\vmu_a, \mSigma_{aa})$.
     \end{proof}
     
     \begin{thm}
-    Same as before, we have $\mX_1, \mX_2$ which are jointly Gaussian, and we'll derive the conditional distribution $p(\rx_1 | \rx_2)$.
+        Same as before, we have $\mX_1, \mX_2$ which are jointly Gaussian, and we'll derive the conditional distribution $p(\rx_1 | \rx_2)$.
     \end{thm}
     
     \begin{align}
